--- a/test-output/All Test Suite/methods.html
+++ b/test-output/All Test Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>All Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a09464">  <td>21/06/14 23:43:32</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;com.bridgelabz.base.Base.setup()">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@687780858</td>   <td></td> </tr>
-<tr bgcolor="67b872">  <td>21/06/14 23:43:47</td>   <td>14925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.bridgelabz.PunePolicePortalTest.portalTest()">portalTest</td> 
-  <td>main@687780858</td>   <td></td> </tr>
-<tr bgcolor="a09464">  <td>21/06/14 23:44:19</td>   <td>46957</td> <td>&nbsp;</td><td title="&lt;&lt;com.bridgelabz.base.Base.teardown()">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@687780858</td>   <td></td> </tr>
+<tr bgcolor="a7e4a7">  <td>21/06/22 18:48:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;com.bridgelabz.base.Base.setup()">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@921420643</td>   <td></td> </tr>
+<tr bgcolor="82b6b2">  <td>21/06/22 18:48:55</td>   <td>25270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.bridgelabz.PunePolicePortalTest.portalTest()">portalTest</td> 
+  <td>main@921420643</td>   <td></td> </tr>
+<tr bgcolor="a7e4a7">  <td>21/06/22 18:49:39</td>   <td>69041</td> <td>&nbsp;</td><td title="&lt;&lt;com.bridgelabz.base.Base.teardown()">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@921420643</td>   <td></td> </tr>
 </table>
