--- a/test-output/old/Default Suite/methods.html
+++ b/test-output/old/Default Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fbf62">  <td>21/06/14 21:02:49</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Base.teardown()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@667a738]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1545242146</td>   <td></td> </tr>
-<tr bgcolor="627e6c">  <td>21/06/14 21:02:08</td>   <td>-41524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PunePolicePortalTest.portalTest()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@667a738]">portalTest</td> 
-  <td>main@1545242146</td>   <td></td> </tr>
-<tr bgcolor="8fbf62">  <td>21/06/14 21:01:50</td>   <td>-59074</td> <td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@667a738]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1545242146</td>   <td></td> </tr>
+<tr bgcolor="9e8083">  <td>21/06/22 19:40:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.setup()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@4275c20c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1752535057</td>   <td></td> </tr>
+<tr bgcolor="b6c3cd">  <td>21/06/22 19:41:02</td>   <td>55511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PunePolicePortalTest.portalTest()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@4275c20c]">portalTest</td> 
+  <td>main@1752535057</td>   <td></td> </tr>
+<tr bgcolor="9e8083">  <td>21/06/22 19:42:07</td>   <td>120750</td> <td>&nbsp;</td><td title="&lt;&lt;Base.teardown()[pri:0, instance:com.bridgelabz.PunePolicePortalTest@4275c20c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1752535057</td>   <td></td> </tr>
 </table>
